# ypass

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml  README.md
cli/src/: clipboard.rs  config.rs  interactive.rs  main.rs  password.rs  pin.rs  state.rs  utils.rs  yubikey.rs
generator/: Cargo.toml  README.md
generator/src/: main.rs
raycast-app/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast-app/src/: get-password.tsx  index.tsx  quick-generate.tsx  utils.ts  utils.tsx
src/: main.rs
