[package]
name = "password-generator"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
# Argon2id for secure key derivation - industry standard as of 2026
argon2 = { version = "0.5", default-features = false, features = ["std"] }
# Secure memory wiping to prevent password leaks
zeroize = { version = "1.8", features = ["derive"] }
# ChaCha20-Poly1305 authenticated encryption for state file
chacha20poly1305 = "0.10.1"
# JSON serialization for state file
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Interactive readline with Tab completion
rustyline = "15.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
