[package]
name = "ypass"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "A secure password manager using YubiKey HMAC-SHA1 challenge-response"
license = "MIT"

[[bin]]
name = "ypass"
path = "src/main.rs"

[dependencies]
# Argon2id for secure key derivation - industry standard as of 2026
argon2 = { version = "0.5", default-features = false, features = ["std"] }
# Secure memory wiping to prevent password leaks
zeroize = "1.8"
# ChaCha20-Poly1305 authenticated encryption for state file
chacha20poly1305 = "0.10.1"
# JSON serialization for state file
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Secure random number generation
getrandom = "0.3.4"
# Interactive readline with Tab completion
rustyline = "17.0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
